--- a/tox.ini
+++ b/tox.ini
@@ -10,9 +10,7 @@ python =
 
 [testenv]
 usedevelop = true
-deps =
-    pytest
-    coverage
+deps = -rrequirements.txt
 commands =
-    coverage run --source=exch -m pytest
+    python -m pytest tests/test_visualml.py
 
