--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,11 @@ python =
 
 [testenv]
 usedevelop = true
-deps = -r requirements.txt
+deps = 
+    sklearn
+    numpy
+    matplotlib
+    pandas
 commands =
     python -m pytest tests/test_visualml.py
 
